--- a/src/app/heroes/heroe/heroe.component.html
+++ b/src/app/heroes/heroe/heroe.component.html
@@ -1,1 +1,22 @@
-<h1>Heroe Component Works</h1>
+<h1>{{ nombre }}</h1>
+
+<dl>
+    <td>Nombre:</td>
+    <dd>{{ nombre }}</dd><br>
+
+    <td>Edad:</td>
+    <dd>{{ edad }}</dd><br>
+
+    <td>Función:</td>
+    <dd>{{ obtenerNombre() }}</dd><br>
+
+    <td>Capitalizado:</td>
+    <dd>{{ nombreCapitalizado }}</dd><br>
+</dl>
+
+<button (click)="cambiarNombre()">
+    Cambiar Héroe
+</button>
+<button (click)="cambiarEdad()">
+    Cambiar edad
+</button>
