--- a/src/app/dragonballz/main-page/main-page.component.html
+++ b/src/app/dragonballz/main-page/main-page.component.html
@@ -3,14 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <h3>Personajes</h3>
-        <hr>
-
-        <ul>
-            <li *ngFor="let personaje of listaPersonajes">
-                {{ personaje.nombre }} - {{ personaje.poder | number}}
-            </li>
-        </ul>
+        <app-personajes [listaPersonajes]="listaPersonajes"></app-personajes>
     </div>
 
     <div class="col">
