--- a/src/app/dragonballz/main-page/main-page.component.html
+++ b/src/app/dragonballz/main-page/main-page.component.html
@@ -7,23 +7,9 @@
     </div>
 
     <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-
-        <form (ngSubmit)="agregar()">
-            <input 
-                type="text" 
-                placeholder="Nombre" 
-                [value]="nuevo.nombre" 
-                (input)="cambiarNombre( $event )" 
-            />
-            <input 
-                type="number" 
-                placeholder="Poder" 
-                name="poder"
-                [(ngModel)]="nuevo.poder"
-            />
-            <button type="submit">Agregar</button>
-        </form>
+        <app-agregar 
+            [listaPersonajes]="listaPersonajes"
+            [nuevo]="nuevo"
+        ></app-agregar>
     </div>
 </div>
