--- a/src/app/dragonballz/main-page/main-page.component.html
+++ b/src/app/dragonballz/main-page/main-page.component.html
@@ -8,8 +8,8 @@
 
     <div class="col">
         <app-agregar 
-            [listaPersonajes]="listaPersonajes"
             [nuevo]="nuevo"
+            (onNuevoPersonaje)="agregarNuevoPersonage( $event )"
         ></app-agregar>
     </div>
 </div>
