--- a/src/app/dragonballz/main-page/main-page.component.html
+++ b/src/app/dragonballz/main-page/main-page.component.html
@@ -7,6 +7,6 @@
     </div>
 
     <div class="col">
-        <app-agregar [nuevo]="nuevo"></app-agregar>
+        <app-agregar></app-agregar>
     </div>
 </div>
